# SLab

./: .gitignore  CMakeLists.txt  Camera.h  LICENSE  README.md  main.cpp  stype.h
docs/devlog/: 1. Environment Configuration.md  2. Draw a Window.md  3. Modify Project Structure.md  4. OpenGL and GLFW.md  5. Renderer & Camera.md
include/: math_utils.h  stype.h
math_utils/: CMakeLists.txt
math_utils/include/: smath.h  vec.h
math_utils/src/: vec.cpp
src/: CMakeLists.txt  Camera.cpp  Camera.h  Primitive.cpp  Primitive.h  camera.cpp  camera.h  framebuffer.cpp  framebuffer.h  main.cpp  renderer.cpp  renderer.h  vertex.cpp  vertex.h
